--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+
 body {
     margin: 0;
     font-family: 'Outfit', sans-serif;
@@ -93,21 +94,6 @@ body {
 /* Quickie Height ends here. */
 
 
-
-.hms_sections
-{
-    border: #0ebcdfab solid 2px;
-    border-radius: 10px;
-    background-color: #005EF9;
-}
-
-.hms_sections img
-{
-    width: 100%;
-    height: 15rem;
-    object-fit: fill;
-}
-
 .nav_tabs a
 {
     display: inline-block;
@@ -191,14 +177,14 @@ body {
 
 .section_img1
 {
-    background-color: #ade9c4;
+    background-color: #c5e4d1 !important;
 }
 
 .bg_image_wood
 {
-    opacity: 0.8;
+    /* opacity: 0.8; */
     margin-bottom: 10%;
-    margin-top:10% !important; 
+    margin-top: auto !important; 
     margin-left:16%;
     width:25% !important;
 }
@@ -211,4 +197,10 @@ body {
 .bg_image_wood p
 {
     font-weight: 600;
+}
+
+.ipad_display img
+{
+    width: 100% !important;
+    height: auto !important;
 }
