--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,13 @@ body {
     color: #198754;
 }
 
+.social_icons a:hover
+{
+    color: #198754;
+    background-color: white;
+    text-decoration: underline;
+}
+
 .bg_image_best
 {
     opacity: 0.8;
