--- a/css/doctor_login.css
+++ b/css/doctor_login.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
@@ -41,16 +40,18 @@
 }
 
 body {
-    background: url("../images/phc_3d_4.jpg") no-repeat center center/cover;
+    background: url("../images/phc_3d_8.jpg") no-repeat center center/cover;
     width: 100vw;
     height: 100vh;
     font-family: 'Outfit', sans-serif;
     font-size: larger;
+    /* background-size: contain; */
 }
 
-/* admin_container class of the form starts here */
 
-.admin_container {
+/* doctor_container class of the form starts here */
+
+.doctor_container {
     position: relative;
     top: 11% !important;
     /* left: 11% !important; */
@@ -60,7 +61,7 @@ body {
     justify-content: center !important;
 }
 
-.admin_container h1 {
+.doctor_container h1 {
     font-size: 50px !important;
     text-align: center;
     margin-bottom: 2rem;
@@ -68,12 +69,12 @@ body {
     font-weight: bold;
 }
 
-.admin_container form a {
+.doctor_container form a {
     color: white;
     margin-top: 5px;
 }
 
-.admin_container form input {
+.doctor_container form input {
     display: block;
     width: 100%;
     border: none;
@@ -87,39 +88,41 @@ body {
     font-size: 1rem;
 }
 
-.admin_container form input::placeholder {
+.doctor_container form input::placeholder {
     color: rgb(0, 0, 0);
 }
 
-.admin_container form [type="submit"] {
+.doctor_container form [type="submit"] {
     background: #28dd6d;
     transition: all 500% ease-in-out;
     cursor: pointer;
     border-radius: 40px;
 }
 
-.admin_container form input[type="submit"]:hover {
+.doctor_container form input[type="submit"]:hover {
     background-color: #058034;
 }
 
-.admin_container form small {
+.doctor_container form small {
     display: block;
     margin-top: 2rem;
     opacity: 0.7;
+    color: #000;
+    font-size: 20px;
 }
 
-.admin_container form small a {
-    color: rgba(236, 156, 156, 0.89);
+.doctor_container form small a {
+    color: rgba(55, 230, 69, 0.89);
     cursor: pointer;
     text-decoration: none;
 }
 
-.admin_container form small a:hover {
+.doctor_container form small a:hover {
     text-decoration: underline;
 }
 
 
-/* admin_container class of the form ends here */
+/* doctor_container class of the form ends here */
 
 
 /* signin and signup class starts here */
